--- a/src/css/sections/about.css
+++ b/src/css/sections/about.css
@@ -1,5 +1,8 @@
 #about {
-    padding: 2rem;
+    margin-bottom: 4rem;
+    max-width: 94rem;
+    margin: auto;
+    /* background: var(--green) */
     margin-bottom: 4rem;
 }
 
@@ -15,13 +18,18 @@
 }
 
 #about-description-wrap {
-    padding: 4rem;
-    max-width: 80rem;
-    margin: 4rem auto;
+    padding: 4rem 8rem;
     background: var(--green);
     display: flex;
     flex-direction: row;
     gap: 2rem;
+    margin-bottom: 4rem;
+}
+
+@media(max-width: 1300px) {
+    #about-description-wrap {
+        padding: 4rem;
+    }
 }
 
 @media(max-width: 1000px) {
@@ -31,7 +39,6 @@
     }
 
     #about {
-        margin-top: 10rem;
         padding: 0;
     }
 
@@ -222,6 +229,7 @@
 
 .skill-wrap {
     background: var(--green);
+    border: 3px solid var(--light-blue);
     width: 8rem;
     padding: 2rem;
     display: flex;
@@ -229,6 +237,7 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
+    filter: drop-shadow(2px 2px 10px var(--dark-green));
 }
 
 #skills-wrap-breakpoint {
@@ -281,6 +290,7 @@
 
 .skill-wrap p {
     margin-bottom: 0 !important;
+    color: var(--light-blue) !important;
 }
 
 
@@ -336,4 +346,10 @@
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
 
+}
+
+#about-below {
+    padding: 4rem 0rem;
+    padding-bottom: 6rem;
+    background: var(--green);
 }
