--- a/src/css/sections/about.css
+++ b/src/css/sections/about.css
@@ -37,12 +37,31 @@
 }
 
 #about-description-wrap {
-    padding: 4rem 8rem;
+    padding: 4rem 6rem;
     background: var(--green);
     display: flex;
     flex-direction: row;
     gap: 2rem;
     margin-bottom: 4rem;
+}
+
+#about-description-links {
+    display: flex;
+    justify-content: center;
+    gap: 0.25rem;
+}
+
+#about-description-links .home_link {
+    border-radius: 0;
+    transform: scale(0.8);
+    margin: 0
+}
+
+#about-description-title {
+    color: var(--light-blue);
+    font-weight: normal;
+    font-size: 1.5rem;
+    text-align: center;
 }
 
 @media(max-width: 1300px) {
@@ -107,7 +126,6 @@
     object-fit: cover;
     display: block;
     margin: 0 auto;
-    border-radius: 50%;
     border: 3px solid var(--light-blue);
 }
 
@@ -115,7 +133,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 
@@ -126,7 +144,8 @@
 
 #about-description-image-wrap p {
     margin: 0 !important;
-    font-size: 1rem;
+    font-size: 0.8rem;
+    text-align: center;
 }
 
 #wakatime-title {
@@ -139,9 +158,8 @@
     align-items: center;
     justify-content: center;
     background: var(--dark-green);
-    border-radius: 5rem;
-    padding: 1rem 1.5rem;
-    max-width: 80%;
+    padding: calc(1rem + 3px);
+    width: 13rem;
     margin: 0 auto;
 }
 
