--- a/src/css/sections/home.css
+++ b/src/css/sections/home.css
@@ -83,7 +83,7 @@
     align-items: center;
     gap: 0.5rem;
     margin-top: 1rem;
-    margin-bottom: 0;
+    margin-bottom: -0.5rem;
     /* background-color: var(--dark-green); */
     border: 0;
     outline: 0;
