--- a/src/css/home.css
+++ b/src/css/home.css
@@ -35,8 +35,8 @@
     height: auto;
   }
   #home_header-wrap {
-    padding: 1rem;
-    margin-bottom: 6rem;
+    padding: 2rem 1rem;
+    margin-bottom: 10rem;
   }
 
   #home_header-wrap h3 {
@@ -51,9 +51,22 @@
 }
 
 #home_header-bottom {
+  font-size: 2.5rem;
   color: var(--light-blue);
   font-family: monomaniac-one;
   font-weight: 100;
+}
+
+@media (max-width: 800px) {
+  #home_header-bottom {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 600px) {
+  #home_header-bottom {
+    font-size: 1.5rem;
+  }
 }
 
 #home_header-wrap p {
@@ -300,5 +313,11 @@
   #home_links-wrap {
     position: absolute;
     left: auto;
+  }
+}
+
+@media (max-width: 700px) {
+  #home_links-wrap {
+    bottom: 3.2rem;
   }
 }
